2010-01-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        transitions/shorthand-border-transitions.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33276

        Yet another transitions test that doesn't give consistent
        wiggle room. Make all the wiggle rooms account for >=200ms
        instead of some that were only giving 100ms wiggle room.

        * transitions/shorthand-border-transitions.html:

2010-01-08  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Eric Seidel.

        REGRESSION(52819?): AXLoadComplete and AXLayoutComplete causes 4 tests fail on Snow Leopard Debug bot
        https://bugs.webkit.org/show_bug.cgi?id=33300

        * platform/mac/Skipped:

2010-01-08  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Kenneth Rohde Christiansen.

        r52976 revealed this failure by re-ordering tests.

        I do not have a Snow Leopard build to test with, so skipping this
        and filed bug https://bugs.webkit.org/show_bug.cgi?id=33372

        * platform/mac-snowleopard/Skipped: platform/mac/editing/input/devanagari-ligature.html skipped.

2010-01-08  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed trivial fix.

        LayoutTests/media/video-error-abort.html moved to LayoutTests/http/tests/media/video-error-abort.html
        by r52923, but wasn't renamed in this skiplist by this commit.

        * platform/win/Skipped:

2010-01-08  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Eric Seidel.

        r52976 revealed this failure by re-ordering tests.
        r52980 corrected the expected results file, but Windows still fails,
        presumably due to another test still affecting this one.

        I do not have a windows build to test with, so skipping this
        and filed bug https://bugs.webkit.org/show_bug.cgi?id=33374

        * platform/win/Skipped: svg/W3C-SVG-1.1/filters-conv-01-f.svg skipped.
