@@ -1,3 +1,13 @@
+2010-01-08  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Beth Dakin.
+
+        AX: CSS content not returned correctly in AX
+        https://bugs.webkit.org/show_bug.cgi?id=33308
+
+        * platform/mac/accessibility/css-content-attribute-expected.txt: Added.
+        * platform/mac/accessibility/css-content-attribute.html: Added.
+
 2010-01-06  Ojan Vafai  <ojan@chromium.org>
 
         Reviewed by Eric Seidel.
